--- a/_data/data.yml
+++ b/_data/data.yml
@@ -21,7 +21,7 @@ sidebar:
     linkedin: ali-seyfi-5966092a9
     # xing: alandoe
     github: AisDisappeared
-    telegram: Alisssseyfiiiii  # add your nickname without '@' sign
+    # telegram: Alisssseyfiiiii  # add your nickname without '@' sign
     # gitlab:
     # bitbucket:
     # twitter: '@webjeda'
