--- a/_data/data.yml
+++ b/_data/data.yml
@@ -56,11 +56,7 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-         I'm 23 years old and Passionate web developer with nearly 1 years of experience in programming and web development. 
-         Known for being a quick learner and having a keen eye for detail, 
-         I thrive in fast-paced environments where I can continuously learn and grow. 
-         Based in Tehran, Iran, I have a strong foundation in coding and a deep love for creating efficient, scalable, 
-         and user-friendly web applications.
+         Learning...
          
 education:
     title: Education
