--- a/_data/data.yml
+++ b/_data/data.yml
@@ -56,7 +56,7 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-         Learning...
+       I am 23 years old and working so hard and amorously to Develop and Creating efficient, scalable, and user-friendly web applications .
          
 education:
     title: Education
