--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ sidebar:
 
     # Profile information
     name: Ali Seyfi
-    tagline: Backend Developer
+    tagline: Python Backend Developer
     avatar: profile.JPG  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
